--- a/src/main/resources/templates/contest/memberCreate.html
+++ b/src/main/resources/templates/contest/memberCreate.html
@@ -6,17 +6,26 @@
 </head>
 <body>
 <h1>미팅 등록</h1>
-<form th:object="${contestMemberDTO}" th:action="@{/contestPro/create}" method="post">
+<form th:object="${contestMemberDTO}" th:action="@{/contestMember/create}" method="post">
 
     <div>
-        <input type="hidden" th:field="*{id}">
-
+        <input type="hidden" id="id" value="id" th:field="*{id}">
     </div>
-
 
     <div>
         <button type="submit">가입하기</button>
     </div>
 </form>
+<script>
+    $(document).ready(function() {
+        $('#image').on('change', function() {
+            let size = this.files[0].size;
+            if (size > 5000000) { // 5MB
+                alert("5MB 이하의 사진만 가능합니다.");
+                $(this).val("");
+            }
+        });
+    });
+</script>
 </body>
 </html>
