--- a/src/main/resources/templates/contest/update.html
+++ b/src/main/resources/templates/contest/update.html
@@ -6,12 +6,19 @@
 </head>
 <body>
 <h1>게시글 수정</h1>
-<form th:object="${contestDTO}" th:action="@{/contest/update}" method="post">
+<form th:object="${contestDTO}" th:action="@{/contest/update}" method="post" enctype="multipart/form-data">
     <div>
-        <input type="hidden" th:field="*{id}">
+        <input type="hidden"  id="id" name="id" th:field="*{id}">
+    </div>
+    <div>
         <label for="conName">대회 이름</label>
         <input type="text" id="conName" name="conName" th:field="*{conName}" required>
         <p th:if="${#fields.hasErrors('conName')}" th:errors="*{conName}"></p>
+    </div>
+    <div>
+        <label for="profileImg">이미지</label>
+        <img id="current-img" src="#" alt="현재 이미지" th:src="@{''}">
+        <input type="file" id="profileImg" name="profileImg" accept="image/*"/>
     </div>
     <div>
         <label for="conInf">내용</label>
@@ -29,9 +36,40 @@
 
     <div>
         <button type="submit">작성 하기</button>
+        <a th:href="@{/}">홈으로</a>
     </div>
 
 
 </form>
+</form>
+<script type="text/javascript">
+    $(document).ready(function() {
+        let id = $('#id').val();
+        $('#profileImg').on('change', function() {
+            let size = this.files[0].size;
+            if (size > 5000000) { // 5MB
+                alert("5MB 이하의 사진만 가능합니다.");
+                $(this).val("");
+            } else {
+                let reader = new FileReader();
+                reader.onload = function(e) {
+                    $('#current-img').attr('src', e.target.result);
+                }
+                reader.readAsDataURL(this.files[0]);
+            }
+        });
+        $.ajax({
+            url: '/study/currentImage',
+            data: {id : id},
+            type: 'GET',
+            success: function (data) {
+                $('#current-img').attr('src',data.imageUrl)
+            },
+            error: function () {
+                alert('오류 발생');
+            }
+        });
+    });
+</script>
 </body>
 </html>
